--- a/RankingVideojuegos/RankingVideojuegos/Views/Shared/_LoginPartial.cshtml
+++ b/RankingVideojuegos/RankingVideojuegos/Views/Shared/_LoginPartial.cshtml
@@ -12,7 +12,7 @@
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout"
-                  asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                  asp-route-returnUrl="@Url.Action("Index", "Videojuegos", new { area = "" })">
                 <button type="submit" class="btn btn-neon btn-sm">
                     Cerrar sesión
                 </button>
