--- a/RankingVideojuegos/RankingVideojuegos/Views/Videojuegos/Index.cshtml
+++ b/RankingVideojuegos/RankingVideojuegos/Views/Videojuegos/Index.cshtml
@@ -9,7 +9,7 @@
 <div class="container mt-5" data-aos="fade-up">
     
     <h1 class="text-center neon-title-purple text-light mb-5 fw-bold">
-        Hola Master
+        🎮 RankingVideojuegos
     </h1>
 
     @if (User.IsInRole("admin"))
